--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "cd client && NODE_ENV=development npx vite --host 0.0.0.0 --port 5000 --strictPort",
-    "build": "cd client && vite build",
-    "start": "cd client && npx vite preview --host 0.0.0.0 --port 5000",
-    "check": "tsc --noEmit"
+    "dev": "vite --port 5001 --host 0.0.0.0",
+    "build": "vite build",
+    "check": "tsc",
+    "preview": "vite preview",
+    "start": "serve -s dist/public -l 5001"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -78,6 +79,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
-    "vite": "^5.4.19"
+    "vite": "^5.4.20"
   }
 }
